crates/wsh-lang/src/parser/v2/snapshots/wsh_lang__parser__v2__tests__no_then_for_if.snap
---
source: crates/wsh-lang/src/parser/v2/mod.rs
expression: "String::from_utf8(buf).unwrap()"
---
Error: expected `then` after if condition
   ╭─[<test>:1:11]
   │
 1 │ if x == 3 echo hi
   │    ───┬──  
   │       ╰──── after this expression
───╯

